--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,9 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
+# VS Code
+.vscode
+
 # PyCharm local config
 .idea/workspace.xml
 .idea/tasks.xml
